cmake_minimum_required(VERSION 2.8.3)
project(ros_system_monitor)

find_package(catkin)

catkin_package(
  CATKIN_DEPENDS
  rospy
  std_msgs
  diagnostic_msgs
)

catkin_install_python(PROGRAMS bin/cpu_monitor.py bin/hdd_monitor.py bin/mem_monitor.py bin/net_monitor.py bin/ntp_monitor.py
                      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})

install(DIRECTORY launch/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch/
)

install(DIRECTORY config/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config/
)